--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,7 +1,6 @@
-{% if page.comments %}
 <script>
   var disqus_config = function () {
-    this.page.url = 'https://{{site.url}}{{page.url}}';
+    this.page.url = '{{site.url}}{{page.url}}';
     this.page.identifier = '{{page.url}}';
   };
   (function () { // DON'T EDIT BELOW THIS LINE
@@ -14,4 +13,3 @@
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by
                                                                                           Disqus.</a></noscript>
 <script id="dsq-count-scr" src="//n0bl3-github-io.disqus.com/count.js" async></script>
-{% endif %}
